fixed sidebar scroll_to location to not hide h1 header behind navigation bar

--- a/wiki/page_templates/reference/content_styling.css
+++ b/wiki/page_templates/reference/content_styling.css
@@ -175,3 +175,9 @@ div.image.middle{
     position:relative;
     height: 50vh;
 }
+
+#fgfuture_content .link_target{
+    position:relative;
+    float:left;
+    top:-200px;
+}
